--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,46 @@
-
-name: Run Python Script
+name: Update M3U Playlist
 
 on:
-  schedule:
-    - cron: '0 16 * * *'  # 根据 UTC 时间，调整到本地午夜 0 点运行
-  workflow_dispatch:  # 允许手动触发
+  push:
+    branches:
+      - main
 
 jobs:
-  run-script:
-    runs-on: ubuntu-latest  # 使用最新的 Ubuntu 虚拟环境
+  build:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # 确保完整检出所有提交
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-      
-      - name: Install dependencies
-        run: |
-          pip install requests beautifulsoup4
-        
-      - name: Run Python script
-        run: python scripts/aaa/test1.py
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'  # 使用适当的 Python 版本
 
-      - name: Force update file timestamps
-        run: |
-          touch scripts/aaa/*.m3u
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
 
-      - name: Check for generated files
-        run: |
-          ls -la scripts/aaa/  # 列出目录中的所有文件，确认 M3U 文件是否存在
+    - name: Clean up old M3U files
+      run: |
+        find scripts/aaa -type f -name '*.m3u' -exec rm -f {} +
 
-      - name: Configure Git
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git config --global --add safe.directory /github/workspace
+    - name: Run script
+      run: |
+        python your_script.py
 
-      - name: Commit and push changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 确保这个 TOKEN 在你的仓库中正确配置
-        run: |
-          git add -A  # 添加所有更改，包括删除的文件
-          git commit -m "Update M3U files" || echo "No changes to commit"
-          git push || echo "Nothing to push"
+    - name: Check for generated files
+      run: |
+        ls -la scripts/aaa/  # 列出目录中的所有文件，确认 M3U 文件是否存在
+
+    - name: Commit and push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@github.com'
+        git config --global --add safe.directory /github/workspace
+        git add -A
+        git commit -m "Update M3U files" || echo "No changes to commit"
+        git push || echo "Nothing to push"
