--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'  # 使用适当的 Python 版本
-
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+        python-version: '3.9'
 
     - name: Clean up old M3U files
       run: |
@@ -30,7 +26,7 @@ jobs:
 
     - name: Run script
       run: |
-        python your_script.py
+        python scripts/aaa/test1.py  # 确保路径正确，运行脚本
 
     - name: Check for generated files
       run: |
