--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Run script
       run: |
-        python scripts/aaa/test1.py  # 确保路径正确，运行脚本
+        python scripts/aaa/test.py  # 确保路径正确，运行脚本
 
     - name: Check for generated files
       run: |
