--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,4 @@
+
 name: Update M3U Playlist
 
 on:
@@ -7,7 +8,6 @@ on:
   schedule:
     - cron: '20 0 * * *'  # 每天午夜12:20（UTC）触发工作流
   workflow_dispatch:  # 允许手动触发工作流
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
 
     - name: Run script
       run: |
-        python scripts/aaa/test.py  # 确保路径正确，运行脚本
+        python scripts/aaa/test2.py  # 确保路径正确，运行脚本
 
     - name: Check for generated files
       run: |
@@ -47,10 +47,3 @@ jobs:
         git add -A
         git commit -m "Update M3U files" || echo "No changes to commit"
         git push || echo "Nothing to push"
-
-    - name: Manual Test Trigger
-      if: github.event_name == 'workflow_dispatch'
-      run: |
-        echo "Manual test triggered"
-        python scripts/aaa/test1.py
-        echo "Manual test completed"
