--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -7,6 +7,7 @@ on:
   schedule:
     - cron: '20 0 * * *'  # 每天午夜12:20（UTC）触发工作流
   workflow_dispatch:  # 允许手动触发工作流
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,7 +27,7 @@ jobs:
 
     - name: Clean up old specific M3U files
       run: |
-        find scripts/aaa -type f -name 'playlistw.m3u' -exec rm -f {} +
+        find scripts/aaa -type f -name 'playlisty.m3u' -exec rm -f {} +
 
     - name: Run script
       run: |
