--- a/.github/workflows/daily_script.yml
+++ b/.github/workflows/daily_script.yml
@@ -2,32 +2,33 @@ name: Daily Script Execution
 
 on:
   schedule:
-    - cron: '20 0 * * *'  # 每天的0:20运行
+    - cron: '20 0 * * *'  # 每天的 00:20 运行
+  workflow_dispatch:  # 手动触发的选项
 
 jobs:
   run-daily-script:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'  # 根据你的 Python 版本进行调整
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests beautifulsoup4
 
-      - name: Clean environment files
-        run: |
-          rm -f scripts/aaa/combined1.txt
-          rm -f scripts/aaa/cleaned_combined1.txt
-          rm -f playlisty.m3u
-        shell: bash
+    - name: Clean up old files
+      run: |
+        rm -f scripts/aaa/combined1.txt
+        rm -f scripts/aaa/cleaned_combined1.txt
+        rm -f scripts/aaa/playlisty.m3u
 
-      - name: Run Python script
-        run: python scripts/aaa/test1.py
+    - name: Run Python script
+      run: |
+        python scripts/aaa/test1.py  # 运行你的主脚本
