--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -1,51 +1,34 @@
-
-
-name: Update M3U Playlist
+name: Daily Script Execution
 
 on:
-  push:
-    branches:
-      - main
   schedule:
-    - cron: '10 0 * * *'  # 每天午夜12:20（UTC）触发工作流
-  workflow_dispatch:  # 允许手动触发工作流
+    - cron: '20 0 * * *'  # 每天的 00:20 运行
+  workflow_dispatch:  # 手动触发的选项
 
 jobs:
-  build:
+  run-daily-script:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.x'  # 根据你的 Python 版本进行调整
 
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install requests beautifulsoup4
 
-    - name: Clean up old specific M3U files
+    - name: Clean up old files
       run: |
-        find scripts/aaa -type f -name 'playlisty.m3u' -exec rm -f {} +
+        rm -f scripts/aaa/combined1.txt
+        rm -f scripts/aaa/cleaned_combined1.txt
+        rm -f scripts/aaa/playlisty.m3u
 
-    - name: Run script
+    - name: Run Python script
       run: |
-        python scripts/aaa/test1.py  # 确保路径正确，运行脚本
-
-    - name: Check for generated files
-      run: |
-        ls -la scripts/aaa/  # 列出目录中的所有文件，确认新的 M3U 文件是否生成
-
-    - name: Commit and push changes
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'github-actions@github.com'
-        git config --global --add safe.directory /github/workspace
-        git add -A
-        git commit -m "Update M3U files" || echo "No changes to commit"
-        git push || echo "Nothing to push"
+        python scripts/aaa/test1.py  # 运行你的主脚本
