Update Run Test1 Script.yml

--- a/.github/workflows/Run Test1 Script.yml
+++ b/.github/workflows/Run Test1 Script.yml
@@ -37,6 +37,11 @@ jobs:
       run: |
         ls -la scripts/aaa/
 
+    - name: Check for changes
+      run: |
+        git status
+        git diff --name-only
+
     - name: Commit and push changes
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
