--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -31,13 +31,13 @@ jobs:
       - name: Merge M3U files
         run: |
           echo "#EXTM3U" > scripts/bbb/merged.m3u
-          for file in scripts/bbb/*.m3u; do
+          for file in scripts/ccc/*.m3u; do
             cat "$file" >> scripts/bbb/merged.m3u
             echo "\n# --- End of Episode ---\n" >> scripts/bbb/merged.m3u
           done
 
       - name: Force update file timestamps
-        run: touch scripts/bbb/*.m3u
+        run: touch scripts/ccc/*.m3u
 
       - name: Check for generated files
         run: ls -la scripts/bbb/
@@ -49,6 +49,6 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git add scripts/bbb/merged.m3u
+          git add scripts/ccc/merged.m3u
           git commit -m "Update merged M3U file" || echo "No changes to commit"
           git push || echo "Nothing to push"
