--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           echo "#EXTM3U" > scripts/bbb/merged.m3u
           for file in scripts/ccc/*.m3u; do
-            cat "$file" >> scripts/bbb/merged.m3u
+            cat "$file" >> scripts/ccc/merged.m3u
             echo "\n# --- End of Episode ---\n" >> scripts/bbb/merged.m3u
           done
 
@@ -40,7 +40,7 @@ jobs:
         run: touch scripts/ccc/*.m3u
 
       - name: Check for generated files
-        run: ls -la scripts/bbb/
+        run: ls -la scripts/ccc/
 
       - name: Configure Git
         run: |
